--- a/css/sass-demo4.scss
+++ b/css/sass-demo4.scss
@@ -1,8 +1,24 @@
 @import "reset";
 
 body {
-  background: #f79f9f;
+  background: #fff;
   font-family: Helvetica, sans-serif;
   font-size: 18px;
-  color: #333
+  color: #333;
+}
+
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  color: red;
+  font-size: 3em;
+  font-weight: bold;
+}
+
+p {
+  color: red;
+}
+
+a {
+  color: blue;
+  text-decoration: underline;
 }
